--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body{
     display: none;
 }
 
+/* NavBar */
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -26,8 +28,9 @@ nav{
     border-bottom: 1px solid var(--very-light-pink);
 }
 
-.menu{
+.menuHamIcon{
     display: none;
+    cursor: pointer;
 }
 
 .logo{
@@ -91,7 +94,7 @@ nav{
      align-items: center;
 }
 
-/* //////////////////////////////////////// */
+/* Desktop Menu */
 
 .desktop-menu{
     position: absolute;
@@ -134,8 +137,55 @@ nav{
     display: inline-block;
 }
 
+/* Mobile Menu */
+
+.mobile-menu{       
+    padding: 24PX;
+    position: absolute;
+    top: 61px;
+}
+
+.mobile-menu ul{
+    list-style: none;
+    padding: 0;
+    margin: 32px 0 0 0;
+}
+
+.mobile-menu ul:nth-child(1){
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--hospital-green);
+}
+
+.mobile-menu ul li{
+    text-align: start;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.mobile-menu ul li a{
+    color: var(--black);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.mobile-menu .email{
+    font-size: var(--sm);
+    font-weight: 300;
+}
+
+.mobile-menu .sign-out{
+    color: var(--hospital-green);
+    font-size: var(--sm);
+}
+
+.mobile-menu ul:nth-child(3){  
+    bottom: 20px;
+}
+
+/*Media querys*/
+
 @media (max-width:725px) {
-    .menu{
+    .menuHamIcon{
         display: block;
     }
 
@@ -145,7 +195,16 @@ nav{
 
     .navbar-email{
         display: none;
+    }    
+
+    .desktop-menu{
+        display: none;
     }
-    
+}
+
+@media (min-width:726px) {
+    .mobile-menu{
+        display: none;
+    }
 }
 
