--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav{
 
 .navbar-shopping-cart{
     position: relative;
+    cursor: pointer;
 }
 
 .navbar-shopping-cart div{
@@ -143,6 +144,7 @@ nav{
     padding: 24PX;
     position: absolute;
     top: 61px;
+    background-color: var(--white);
 }
 
 .mobile-menu ul{
@@ -182,6 +184,158 @@ nav{
     bottom: 20px;
 }
 
+/* Aside product detail (shopping cart)*/
+
+.product-detail{
+    width: 360px;
+    padding: 24px;
+    box-sizing: border-box;
+    position: absolute;
+    right: 0;
+    background-color: var(--white);
+
+}
+
+.title-container{
+    display: flex;            
+}
+
+.title-container img{
+    transform: rotate(180deg);
+    margin-right: 16px;
+    
+}
+
+.title-container:hover{
+    cursor: pointer;
+}
+
+.title{
+    font-size: var(--lg);
+    font-weight: bold;
+}
+
+/* .my-order-content{
+    display: flex;
+    flex-direction: column;
+} */
+
+.order{
+    display: grid;
+    grid-template-columns: auto  1fr;
+    gap: 16px;
+    align-items: center;
+    background-color: var(--text-input-field);
+    margin-bottom: 24px;
+    padding: 0 24px 0 24px;
+    border-radius: 8px;
+}
+
+.order p:nth-child(1){
+    display: flex;
+    flex-direction: column;            
+}
+
+.order p span:nth-child(1){
+    font-size: var(--md);      
+    font-weight: bold;     
+}
+
+.order p:nth-child(2){
+    text-align: end;
+    font-weight: bold;            
+}
+
+.shopping-cart{
+    display: grid;
+    grid-template-columns:  auto 1fr auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+}
+
+.shopping-cart figure{
+    margin: 0;
+}
+
+.shopping-cart figure img{
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.shopping-cart p:nth-child(2) {
+    color: var(--very-light-pink);
+}
+
+.shopping-cart p:nth-child(3) {
+    font-size: var(--md);
+    font-weight: bold;
+}
+
+.primary-button{
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+
+/* Section MainContainer ProductList*/
+
+.cards-container{
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 26px;
+    place-content: center;
+}
+
+.product-card{
+    width: 240px;                
+}
+
+.product-card img{
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.product-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+    margin-top: 20px;              
+}
+
+.product-info div p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin: 0 0 4px 0;
+}
+
+.product-info div p:nth-child(2){
+    font-size: var(--sm);
+    margin: 0;
+    color: var(--very-light-pink);
+}
+
+.product-info figure{
+    margin: 0;
+}
+
+.product-info figure img{
+    width: 36px;
+    height: 36px;
+}
+
+
 /*Media querys*/
 
 @media (max-width:725px) {
@@ -200,11 +354,36 @@ nav{
     .desktop-menu{
         display: none;
     }
+
+    .product-detail{
+        width: 100%;
+    }
+
+    .cards-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 140px);
+        gap: 26px;
+        }
+    
+        .product-card{
+            width: 140px;
+        }
+    
+        .product-card img{
+            width: 140px;
+            height: 140px;
+            border-radius: 20px;
+            object-fit: cover;
+        }
 }
 
 @media (min-width:726px) {
     .mobile-menu{
         display: none;
+    }
+
+    .product-detail{
+        padding: 0 24px;
     }
 }
 
