produc detail aside info was added to the main html file, some css bugs was resolved, like same class names.

--- a/style.css
+++ b/style.css
@@ -140,9 +140,11 @@ nav{
 
 /* Mobile Menu */
 
-.mobile-menu{       
+.mobile-menu{   
     padding: 24PX;
+    width: 100%;
     position: absolute;
+    left: 0;
     top: 61px;
     background-color: var(--white);
 }
@@ -184,16 +186,21 @@ nav{
     bottom: 20px;
 }
 
-/* Aside product detail (shopping cart)*/
+/* Aside*/
 
-.product-detail{
+aside{
     width: 360px;
-    padding: 24px;
+    height: 100%;
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     right: 0;
     background-color: var(--white);
+}
 
+/* Shopping cart */
+
+#shoppingCartContainer{
+    padding: 0 24px;
 }
 
 .title-container{
@@ -214,6 +221,77 @@ nav{
     font-size: var(--lg);
     font-weight: bold;
 }
+
+/*ProductDetail*/
+
+.product-detail-close{
+    background-color: var(--white);
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    z-index:2; 
+    padding: 4px;   
+    border-radius: 50%;    
+    display: flex;  
+}
+
+.product-detail-close:hover{
+    cursor: pointer;
+}
+
+#productDetail > img:nth-child(2){
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+
+.primary-button{
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.add-to-cart-buton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#productDetail .product-info{
+    margin: 24px 24px 0 24px;
+}
+
+#productDetail .product-info p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+
+#productDetail .product-info p:nth-child(2){
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
+#productDetail .product-info p:nth-child(3){
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
 
 /* .my-order-content{
     display: flex;
@@ -307,33 +385,34 @@ nav{
     object-fit: cover;
 }
 
-.product-info{
+.product-card .product-info{
     display: flex;
     justify-content: space-between;
     align-items: center;  
     margin-top: 20px;              
 }
 
-.product-info div p:nth-child(1){
+.product-card .product-info div p:nth-child(1){
     font-weight: bold;
     font-size: var(--md);
     margin: 0 0 4px 0;
 }
 
-.product-info div p:nth-child(2){
+.product-card .product-info div p:nth-child(2){
     font-size: var(--sm);
     margin: 0;
     color: var(--very-light-pink);
 }
 
-.product-info figure{
+.product-card .product-info figure{
     margin: 0;
 }
 
-.product-info figure img{
+.product-card .product-info figure img{
     width: 36px;
     height: 36px;
 }
+
 
 
 /*Media querys*/
@@ -355,7 +434,7 @@ nav{
         display: none;
     }
 
-    .product-detail{
+    aside{
         width: 100%;
     }
 
@@ -363,18 +442,18 @@ nav{
         display: grid;
         grid-template-columns: repeat(auto-fill, 140px);
         gap: 26px;
-        }
+    }
     
-        .product-card{
+    .product-card{
             width: 140px;
-        }
+    }
     
-        .product-card img{
+    .product-card img{
             width: 140px;
             height: 140px;
             border-radius: 20px;
             object-fit: cover;
-        }
+    }
 }
 
 @media (min-width:726px) {
@@ -382,8 +461,5 @@ nav{
         display: none;
     }
 
-    .product-detail{
-        padding: 0 24px;
-    }
 }
 
